--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "tabWidth": 2,
   "useTabs": false,
   "semi": false,
-  "singleQuote": false
+  "singleQuote": true,
+  "trailingComma": "none"
 }
